<resources>
    <string name="app_name">住房邦</string>
    <string name="action_settings">Settings</string>
    <string name="tab_home_name">精英圈</string>
    <string name="tab_message_name">消息</string>
    <string name="tab_onekey_name">一键抢单</string>
    <string name="tab_share_name">分享</string>
    <string name="tab_me_name">我的</string>
    <string name="edit">编辑</string>
    <string name="complete">完成</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="save">保存</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="complaint">投诉</string>
    <string name="no_authentication">未认证</string>
    <string name="wait_check">等待审核</string>
    <string name="waiting_check">正在等待审核</string>
    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <string name="title_forget_password">忘记密码</string>
    <string name="title_moments">房友圈</string>
    <string name="title_message">消息</string>
    <string name="title_mine">我的</string>
    <string name="title_call">呼叫所在片区房产社区专家</string>
    <string name="title_grab">一键抢单</string>
    <string name="title_search">搜索结果</string>
    <string name="title_publish">发布</string>
    <string name="title_to_setting">设置</string>
    <string name="title_to_about">关于我们</string>
    <string name="title_to_agreement">用户服务协议</string>
    <string name="title_to_feedback">意见反馈</string>
    <string name="title_to_add_friend">添加好友</string>
    <string name="title_to_apply_friend">好友申请</string>
    <string name="title_location">所在位置</string>
    <string name="title_search_location">位置搜索</string>
    <string name="title_broker_evaluate">评价</string>
    <string name="title_district_choose">片区选择</string>
    <string name="title_village_choose">小区选择</string>
    <string name="title_edit_alias">修改昵称</string>
    <string name="title_personal_information">个人信息</string>
    <string name="title_friend_remark">备注</string>
    <string name="title_realname_authentication">实名认证</string>
    <string name="title_qualification_authentication">资质认证</string>
    <string name="title_upload">成交上传</string>
    <string name="title_mine_shop">我的店铺</string>
    <string name="title_near_broker">附近优秀社区专家</string>
    <string name="title_sell_broker">售房专家</string>
    <string name="title_rent_broker">租房专家</string>
    <string name="title_after_sales_finance">售后金融</string>
    <string name="title_fill_information">填写资料</string>
    <string name="title_search_result">搜索结果</string>
    <string name="title_gold_coin">金币商城</string>
    <string name="title_cashing_center">兑换中心</string>
    <string name="title_task_center">任务中心</string>
    <string name="title_game_center">游戏中心</string>
    <string name="title_goods_detail">商品详情</string>
    <string name="title_confirm_order">确认订单</string>
    <string name="title_my_order">我的订单</string>
    <string name="title_special_commend">特别推荐</string>
    <string name="title_coin_rule">金币规则</string>
    <string name="btn_login">立即登录</string>
    <string name="btn_register">立即注册</string>
    <string name="btn_submit">提交</string>
    <string name="btn_get_verification">获取验证码</string>
    <string name="btn_call_say">按住  说话</string>
    <string name="hint_input_phone_number">请输入手机号</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="hint_remember_password">记住账号密码</string>
    <string name="hint_forget_password">忘记密码？</string>
    <string name="hint_input_verify_error">手机或密码输入错误</string>
    <string name="hint_input_sms_error">验证码输入错误</string>
    <string name="hint_input_phone_error">手机号码不正确</string>
    <string name="hint_input_unregister_error">该手机未注册</string>
    <string name="hint_input_register_error">该手机已经注册</string>
    <string name="hint_input_msm_verification">请输入短信验证码</string>
    <string name="hint_input_new_password">请输入新密码（6-16字符或数字）</string>
    <string name="hint_input_invite_code">请输入邀请码，没有可不填</string>
    <string name="hint_new_password_format">密码只能为长度6-16字符或数字</string>
    <string name="hint_register_text">点击上面的“按钮”即表示你同意</string>
    <string name="hint_register_agreement">《服务协议及隐私政策》</string>
    <string name="hint_home_search">请输入小区名称或片区名称</string>
    <string name="hint_friends_near">点击设置，查看其他周边信息</string>
    <string name="hint_friends_public">与大家分享你的想法…</string>
    <string name="hint_map_search">可移动地图直接设定位置或搜索定位</string>
    <string name="hint_limit_broker">最多输入8个字符（4个中文）</string>
    <string name="hint_limit_user">最多输入12个字符（6个中文）</string>
    <string name="label_login_ordinary">登录</string>
    <string name="label_login_sms_verification">短信验证登录</string>
    <string name="label_user">客户</string>
    <string name="label_broker">经纪人</string>
    <string name="label_home">首页</string>
    <string name="label_friends">房友圈</string>
    <string name="label_more_comment">查看全部评论</string>
    <string name="label_call">一键发布</string>
    <string name="label_grab">一键抢单</string>
    <string name="label_message">消息</string>
    <string name="label_mine">我的</string>
    <string name="label_position">位置</string>
    <string name="label_home_user1">附近优秀社区专家</string>
    <string name="label_home_user2">精华推荐</string>
    <string name="label_home_more">更多</string>
    <string name="label_home_history">历史搜索</string>
    <string name="label_home_clear">清空</string>
    <string name="label_home_hot">热门搜索</string>
    <string name="label_home_area">切换片区</string>
    <string name="label_home_sort">排序</string>
    <string name="label_sort_one">星级</string>
    <string name="label_sort_two">成交量</string>
    <string name="label_sort_three">好评率</string>
    <string name="label_friends_choose_one">附近</string>
    <string name="label_friends_choose_two">好友</string>
    <string name="label_friends_choose_three">与我有关</string>
    <string name="label_message_choose_one">经纪人</string>
    <string name="label_message_choose_two">用户</string>
    <string name="label_message_choose_three">系统消息</string>
    <string name="label_mine_top">我的住房邦</string>
    <string name="label_mine_txt_one">登陆住房邦</string>
    <string name="label_mine_txt_two">可以快速找到附近社区专家</string>
    <string name="label_mine_register">注册</string>
    <string name="label_mine_login">登陆</string>
    <string name="label_mine_user_state">近期状态</string>
    <string name="label_mine_broker_expert">专家类型：</string>
    <string name="label_mine_coin">金币商城</string>
    <string name="label_grab_customer">抢客户</string>
    <string name="label_grab_already_customer">已抢客户</string>
    <string name="label_grab_resources">抢房源</string>
    <string name="label_grab_already_resources">已抢房源</string>
    <string name="label_sell">售</string>
    <string name="label_rent">租</string>
    <string name="label_administrative_region">行政区</string>
    <string name="label_district">片区</string>
    <string name="label_community">小区</string>
    <string name="label_praised">赞了你</string>
    <string name="label_your_choice">您的选择:</string>
    <string name="label_your_brokerage">支付佣金:</string>
    <string name="label_entity_cashing">实物兑换</string>
    <string name="label_privilege_cashing">特权兑换</string>
    <string name="label_task_day">每日任务</string>
    <string name="label_task_month">签到任务</string>
    <string name="label_task_novice">新手任务</string>
    <string name="label_task_activity">活动任务</string>
    <string name="label_entrust_house">房源委托</string>
    <string name="label_entrust_call">呼叫委托</string>
    <string name="label_entrust_chat">聊天委托</string>
    <string name="label_user_district">关注的片区</string>
    <string name="label_user_village">关注的小区</string>
    <string name="label_broker_district">服务的片区</string>
    <string name="label_broker_village">服务的小区</string>
    <string name="label_call_left">选择专家类型</string>
    <string name="label_call_right">选择支付佣金</string>
    <string name="label_select_album">选择相册</string>
    <string name="label_select_photo">选择相片</string>
    <string name="label_loading">加载中</string>
    <string name="label_tip">温馨提示：</string>
    <string name="label_location_sugest">若发布信息为房源信息，建议设定为其所在位置。</string>
    <string name="label_no_content">没有更多内容</string>
    <string name="label_call_tip_head">呼叫附近的房产社区专家来帮你</string>
    <string name="label_call_tip_content">提示：相继发布的两条信息时间间隔不超过15分钟，视为统一需求。若超过视为不同需求</string>
    <string name="label_unit_month">%1$d元/月</string>
    <string name="label_unit_million">%1$d万元</string>
    <string name="label_mine_name">昵称：</string>
    <string name="label_mine_sex">性别：</string>
    <string name="label_mine_contact_phone">联系电话：</string>
    <string name="label_mine_state">近期状态：</string>
    <string name="label_mine_district">服务片区：</string>
    <string name="label_mine_concern_district">关注片区：</string>
    <string name="label_mine_village">服务小区：</string>
    <string name="label_mine_concern_village">关注小区：</string>
    <string name="label_mine_personal_center">我的个人中心</string>
    <string name="label_mine_send_message">发消息</string>
    <string name="label_mine_friend_moments">Ta的房友圈</string>
    <string name="label_mine_company">所属公司：</string>
    <string name="label_mine_store">所属门店：</string>
    <string name="label_mine_way">类型：</string>
    <string name="label_mine_phone">电话：</string>
    <string name="label_mine_turnover">成交量：</string>
    <string name="label_favorable_rate">好评率：</string>
    <string name="label_name_verification">实名认证：</string>
    <string name="label_qualification_verification">资质认证：</string>
    <string name="label_to_my_shop">我的店铺</string>
    <string name="label_to_he_shop">Ta的店铺</string>
    <string name="img_user_entrust">业主委托</string>
    <string name="img_selling_house">售房专家</string>
    <string name="img_renting_house">租房专家</string>
    <string name="img_user_service">售后金融</string>
    <string name="img_grab_house">抢房源</string>
    <string name="img_release_house">发布房源</string>
    <string name="img_shop_manager">店铺管理</string>
    <string name="img_mine_expert">关注的专家</string>
    <string name="img_mine_entrust">我的委托</string>
    <string name="img_mine_friends">我的好友</string>
    <string name="img_mine_moments">我的房友圈</string>
    <string name="img_mine_concern_areas">关注的区域</string>
    <string name="img_mine_service_areas">服务的区域</string>
    <string name="img_mine_collect_houses">收藏的房源</string>
    <string name="img_mine_collect_moments">房友圈收藏</string>
    <string name="img_mine_sign">签到</string>
    <string name="img_mine_mall">积分商城</string>
    <string name="img_mine_qrcode">我的二维码</string>
    <string name="img_mine_setting">设置</string>
    <string name="img_mine_accept_entrust">接受的委托</string>
    <string name="img_mine_upload">成交上传</string>
    <string name="img_mine_share">名片分享</string>
    <string name="toast_is_picked">该图已被选取</string>
    <string name="toast_img_format_error">请选择JPG PNG BMP GIF格式的图片文件</string>
    <string name="toast_waiting_for_open_album">正在打开相册，请稍候 &#8230;</string>
    <string name="toast_error_to_open_album">获取本地图片出错</string>
    <string name="toast_sdcard_not_enough_warning">剩余存储空间很少，建议清理存储卡</string>
    <string name="toast_sdcard_not_enough">存储空间已不足，无法保存此次多媒体消息</string>
    <string name="toast_content_empty">不能发送空内容</string>
    <string name="toast_open_camera">正在启动摄像头，请稍候...</string>
    <string name="toast_camera_invalid">摄像头不可用</string>
    <string name="toast_picture_error">处理图片出错</string>
    <string name="toast_grab_success">抢单成功</string>
    <string name="toast_send_success">发送成功!</string>
    <string name="toast_release_success">发布成功!</string>
    <string name="toast_release_fail">发布失败</string>
    <string name="toast_send_fail">发送失败</string>
    <string name="toast_praise_fail">点赞失败</string>
    <string name="toast_collect_fail">收藏失败</string>
    <string name="toast_delete_collect_fail">取消收藏失败</string>
    <string name="toast_delete_reply_fail">删除评论失败</string>
    <string name="toast_pick_up_brokerage">请先选择佣金</string>
    <string name="toast_complaint_success">投诉成功</string>
    <string name="toast_feedback_success">反馈成功</string>
</resources>