<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ImageView style="@style/login_top_img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edt_height">

        <ImageView
            style="@style/login_icon_style"
            android:src="@drawable/login_phone_number" />

        <EditText
            android:id="@+id/edt_forget_phone"
            style="@style/login_input_box"
            android:layout_weight="1"
            android:hint="@string/hint_input_phone_number"
            android:inputType="number"
            android:maxLength="11" />

        <Button
            android:id="@+id/btn_forget_verification"
            style="@style/login_get_verification"
            android:text="@string/btn_get_verification" />
    </LinearLayout>

    <ImageView style="@style/divider_thin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edt_height">

        <ImageView
            style="@style/login_icon_style"
            android:src="@drawable/login_msm_verification" />

        <EditText
            android:id="@+id/edt_forget_verification"
            style="@style/login_input_box"
            android:hint="@string/hint_input_msm_verification"
            android:inputType="number"
            android:maxLength="6" />
    </LinearLayout>

    <ImageView style="@style/divider_thin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edt_height">

        <ImageView
            style="@style/login_icon_style"
            android:src="@drawable/login_password" />

        <EditText
            android:id="@+id/edt_forget_password"
            style="@style/login_input_box"
            android:hint="@string/hint_input_new_password"
            android:inputType="textPassword"
            android:maxLength="16" />
    </LinearLayout>

    <ImageView style="@style/divider_thin" />

    <Button
        android:id="@+id/btn_submit"
        style="@style/login_btn_style"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_btn_deep"
        android:text="@string/btn_submit" />

    <Button
        android:id="@+id/btn_back"
        style="@style/login_btn_style"
        android:background="@drawable/shape_btn_normal"
        android:text="@string/back"
        android:textColor="@color/my_gray_one" />

    <LinearLayout
        android:id="@+id/llayout_error_find"
        android:layout_width="match_parent"
        android:layout_height="@dimen/warm_width"
        android:visibility="gone">

        <ImageView style="@style/login_warm_icon" />

        <TextView
            android:id="@+id/tv_tips"
            style="@style/login_pop_message"
            android:text="@string/hint_new_password_format" />
    </LinearLayout>

</LinearLayout>
