<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/my_orange_two"
        android:textSize="@dimen/px_sp_18"
        android:gravity="center"
        android:text="@string/label_call_tip_head"
        android:paddingTop="20dp"
        android:paddingBottom="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/my_gray_three"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textSize="@dimen/px_sp_18"
        android:text="@string/label_call_tip_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/my_orange_two"
            android:text="@string/label_your_choice"/>
        <TextView
            android:id="@+id/tv_broker_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/my_orange_two"
            android:text="租售专家"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/my_orange_two"
            android:text="@string/label_your_brokerage"/>
        <TextView
            android:id="@+id/tv_brokerage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/my_orange_two"
            android:text="不限"/>
    </LinearLayout>



</LinearLayout>