<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edt_height">

        <ImageView
            style="@style/login_icon_style"
            android:src="@drawable/login_phone_number" />

        <EditText
            android:id="@+id/edt_sms_phone"
            style="@style/login_input_box"
            android:layout_weight="1"
            android:hint="@string/hint_input_phone_number"
            android:inputType="phone"
            android:maxLength="11" />

        <Button
            android:id="@+id/btn_login_verification"
            style="@style/login_get_verification"
            android:text="@string/btn_get_verification" />
    </LinearLayout>

    <ImageView style="@style/divider_thin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edt_height">

        <ImageView
            style="@style/login_icon_style"
            android:src="@drawable/login_msm_verification" />

        <EditText
            android:id="@+id/edt_login_verification"
            style="@style/login_input_box"
            android:hint="@string/hint_input_msm_verification"
            android:inputType="number"
            android:maxLength="6" />
    </LinearLayout>

    <ImageView style="@style/divider_thin" />

</LinearLayout>
